--- a/index.html
+++ b/index.html
@@ -23,5 +23,51 @@
             <a href="mitos.html">Mitos y Leyendas</a>
         </div>
     </header>
+
+    <main>
+        <div id="cuerpo">
+            <div class="p1">
+                <p class="reseña principal">Reseña.</p>
+
+                <p class="principal">La península de Paraguaná, se encuentra situada al norte del estado Falcón,
+                    en Venezuela. Es una zona xerófila y de suelo árido casi en su totalidad. Surgió como una 
+                    isla que se unió en el período Holoceno con el continente por un istmo rocoso al que la 
+                    aportación de las arenas marinas convirtió en un estrecho corredor de relación, siendo la
+                    región de tierra firme más avanzada en el mar Caribe que tiene Venezuela. Tiene el nombre
+                    de Paraguaná que significa "conuco entre el mar".
+                </p>
+            </div>
+            
+            <div class="p2">
+                <p class="Reseña historica">Reseña Hostórica.</p>
+            
+                <p class="historica1">La península de Paraguaná fue descubierta por el navegante Alonso de Ojeda
+                    el 9 de agosto de 1499, el día de San Román (en), y por esta circunstancia fue bautizada como
+                    Provincia de San Román, denominación oficial que se usó en los documentos del gobierno español
+                    durante algún tiempo, así como también en las cartas de navegación de la época.
+                </p>
+
+                <p class="historica2">A la llegada de los españoles, en la península, habitaban los caquetíos, indios
+                    pacíficos que también poblaban las hoy llamadas islas ABC y gran parte de la zona costera de lo
+                    que es hoy el territorio del Estado Falcón. Estas tribus vivían de la caza y la pesca en su
+                    mayoría, aunque también practicaban algunos cultivos como el maíz y el millo. Alunas de estas
+                    costumbres aún se mantienen en la región.
+                </p>
+
+                <p class="historica3">Hubo un largo contacto con los holandeses, que, a partir del 1634, estaban
+                    instalados en las islas vecinas; ellos introducen pautas culturales que se mezclan con las
+                    autóctonas y las españolas. De todo esto surgen características propias y cargadas de unicidad,
+                    sin embargo, la mayoría de los pueblos conservan topónimos indígenas como nombres y los habitantes
+                    en parte sus tradiciones.
+                </p>
+            </div>
+        </div>
+    </main>
+
+    <footer>
+        <div id="pie">
+            <b> © Lugares emblematicos de Venezuela. <br>Estado Falcón, Venezuela. <br>Península de Paraguaná.</b>
+        </div>
+    </footer>
 </body>
 </html>
