modificaciones de html a economia y platos

--- a/economia.html
+++ b/economia.html
@@ -16,6 +16,7 @@
         </div>
 
         <div id="navegacion">
+            <a href="index.html">Inicio</a>
             <a href="platos.html">Platos típicos</a>
             <a href="turismo.html">Turismo</a>
             <a href="pueblos.html">Pueblos y Culturas</a>
@@ -23,5 +24,29 @@
             <a href="mitos.html">Mitos y Leyendas</a>
         </div>
     </header>
+
+    <main>
+        <div id="cuerpo economia">
+            <p class="reseña economia">Economía.</p>
+
+            <p class="economia1">La principal actividad económica de la <b>Península de Paraguaná</b>, está
+                relacionada con la industria petrolera. En la <b>Península de Paraguaná</b>, se ubican dos
+                refinerías de gran capacidad de producción para la exportación y el consumo de todo el país. 
+            </p>
+
+            <p class="economia2">Punto Fijo es asiento del segundo complejo refinador petrolero más grande
+                del mundo, pues, el Centro de Refinación de Paraguaná (CRP), se compone de la Refinería de 
+                Amuay y la Refinería Cardón. Así mismo, la ciudad es puerto base de la segunda flota pesquera
+                del país, además, cuenta con la Zona Franca Industrial, Comercial y de Servicios de Paraguaná,
+                C.A. (ZONFICA), donde se encuentran instaladas empresas livianas y electrónicas.
+            </p>
+        </div>
+    </main>
+
+    <footer>
+        <div id="pie">
+            <b> © Lugares Emblematicos de Venezuela. <br>Estado Falcón, Venezuela. <br>Península de Paraguaná.</b>
+        </div>
+    </footer>
 </body>
 </html>
