--- a/index.html
+++ b/index.html
@@ -16,6 +16,7 @@
         </div>
 
         <div id="navegacion">
+            <a href="index.html">Inicio</a>
             <a href="platos.html">Platos típicos</a>
             <a href="turismo.html">Turismo</a>
             <a href="pueblos.html">Pueblos y Culturas</a>
@@ -29,9 +30,9 @@
             <div class="p1">
                 <p class="reseña principal">Reseña.</p>
 
-                <p class="principal">La península de Paraguaná, se encuentra situada al norte del estado Falcón,
-                    en Venezuela. Es una zona xerófila y de suelo árido casi en su totalidad. Surgió como una 
-                    isla que se unió en el período Holoceno con el continente por un istmo rocoso al que la 
+                <p class="principal">La <b>Península de Paraguaná</b>, se encuentra situada al norte del estado 
+                    Falcón, en Venezuela. Es una zona xerófila y de suelo árido casi en su totalidad. Surgió como
+                    una isla que se unió en el período Holoceno con el continente por un istmo rocoso al que la 
                     aportación de las arenas marinas convirtió en un estrecho corredor de relación, siendo la
                     región de tierra firme más avanzada en el mar Caribe que tiene Venezuela. Tiene el nombre
                     de Paraguaná que significa "conuco entre el mar".
@@ -41,13 +42,13 @@
             <div class="p2">
                 <p class="Reseña historica">Reseña Hostórica.</p>
             
-                <p class="historica1">La península de Paraguaná fue descubierta por el navegante Alonso de Ojeda
+                <p class="historica1">La <b>Península de Paraguaná</b> fue descubierta por el navegante Alonso de Ojeda
                     el 9 de agosto de 1499, el día de San Román (en), y por esta circunstancia fue bautizada como
                     Provincia de San Román, denominación oficial que se usó en los documentos del gobierno español
                     durante algún tiempo, así como también en las cartas de navegación de la época.
                 </p>
 
-                <p class="historica2">A la llegada de los españoles, en la península, habitaban los caquetíos, indios
+                <p class="historica2">A la llegada de los españoles, en la <b>península</b>, habitaban los caquetíos, indios
                     pacíficos que también poblaban las hoy llamadas islas ABC y gran parte de la zona costera de lo
                     que es hoy el territorio del Estado Falcón. Estas tribus vivían de la caza y la pesca en su
                     mayoría, aunque también practicaban algunos cultivos como el maíz y el millo. Alunas de estas
@@ -66,7 +67,7 @@
 
     <footer>
         <div id="pie">
-            <b> © Lugares emblematicos de Venezuela. <br>Estado Falcón, Venezuela. <br>Península de Paraguaná.</b>
+            <b> © Lugares Emblematicos de Venezuela. <br>Estado Falcón, Venezuela. <br>Península de Paraguaná.</b>
         </div>
     </footer>
 </body>
