--- a/mitos.html
+++ b/mitos.html
@@ -16,6 +16,7 @@
         </div>
 
         <div id="navegacion">
+            <a href="index.html">Inicio</a>
             <a href="platos.html">Platos típicos</a>
             <a href="turismo.html">Turismo</a>
             <a href="pueblos.html">Pueblos y Culturas</a>
