--- a/platos.html
+++ b/platos.html
@@ -16,6 +16,7 @@
         </div>
 
         <div id="navegacion">
+            <a href="index.html">Inicio</a>
             <a href="platos.html">Platos típicos</a>
             <a href="turismo.html">Turismo</a>
             <a href="pueblos.html">Pueblos y Culturas</a>
@@ -23,5 +24,44 @@
             <a href="mitos.html">Mitos y Leyendas</a>
         </div>
     </header>
+
+    <main>
+        <div id="cuerpo platos">
+            <div class="p3">
+                <p class="intro">Paraguaná, cuenta con una variedad muy extensa de platos típicos; entre
+                    ellos destacan:</p>
+
+                <h3><span>1</span>Arepa pelada con queso de cabra.</h3>
+
+                <p class="plato1">La arepa pelada se diferencia de las arepas hechas con harinas refinadas porque el maíz
+                    con el que se prepara se pone a remojar con cal o ceniza, dándole un sabor <b>paraguanero</b> particular. 
+                    El queso de cabra casero, por su parte, es de textura suave y bajo en sal. 
+                </p>
+
+                <h3><span>2</span>Arepa de millo.</h3>
+
+                <p class="plato2">El millo, es un cereal de grano pequeño proveniente de la planta del mismo nombre, pequeña
+                    y resistente a la falta de agua. Pese a que la planta es de origen asiático y fue traída a la <b>península
+                    de Paraguaná</b> durante la colonia, se adaptó muy bien al clima local, ocupando el quinto lugar en las 
+                    cosechas paraguaneras. Esta arepa, generalmente es dulce, ya que, a la preparación, se le agrega panela y
+                    leche.
+                </p>
+
+                <h3><span>3</span>El chivo.</h3>
+
+                <p class="plato3">El chivo, es uno de los platos típicos de <b>Paraguaná</b> más resaltante; en la <b>península</b>,
+                    existen 3 formas típicas de prepararlo, que son, guisado, salado y el popular chivo en coco. El chivo, es un 
+                    animal que los mismos habitantes acostumbran a criar y también los usan como actividad económica en los pueblos. 
+                </p>
+
+            </div>
+        </div>
+    </main>
+
+    <footer>
+        <div id="pie">
+            <b> © Lugares Emblematicos de Venezuela. <br>Estado Falcón, Venezuela. <br>Península de Paraguaná.</b>
+        </div>
+    </footer>
 </body>
 </html>
