solo faltan fotos en el html

--- a/economia.html
+++ b/economia.html
@@ -27,6 +27,7 @@
 
     <main>
         <div id="cuerpo economia">
+            
             <p class="reseña economia">Economía.</p>
 
             <p class="economia1">La principal actividad económica de la <b>Península de Paraguaná</b>, está
@@ -45,7 +46,7 @@
 
     <footer>
         <div id="pie">
-            <b> © Lugares Emblematicos de Venezuela. <br>Estado Falcón, Venezuela. <br>Península de Paraguaná.</b>
+            <br>Estado Falcón, Venezuela. <br>Península de Paraguaná.</b>
         </div>
     </footer>
 </body>
