--- a/index.html
+++ b/index.html
@@ -28,6 +28,7 @@
     <main>
         <div id="cuerpo">
             <div class="p1">
+                
                 <p class="reseña principal">Reseña.</p>
 
                 <p class="principal">La <b>Península de Paraguaná</b>, se encuentra situada al norte del estado 
@@ -67,7 +68,7 @@
 
     <footer>
         <div id="pie">
-            <b> © Lugares Emblematicos de Venezuela. <br>Estado Falcón, Venezuela. <br>Península de Paraguaná.</b>
+            <br>Estado Falcón, Venezuela. <br>Península de Paraguaná.</b>
         </div>
     </footer>
 </body>
