--- a/pueblos.html
+++ b/pueblos.html
@@ -24,5 +24,44 @@
             <a href="mitos.html">Mitos y Leyendas</a>
         </div>
     </header>
+
+    <main>
+        <div id="cuerpo pueblos">
+
+            <p class="reseña pueblos">Por su clima y por ser una región costera, la <b>Península de Paraguaná</b>,
+            se encuentra rodeada de hermosos pueblitos y paisajes; algunos de ellos son:
+            </p>
+            
+            <h3><span>1</span>Pueblo nuevo.</h3>
+
+            <p>Se encuentra ubicado en la <b>península de Paraguaná</b> y es capital del municipio Falcón em dicho
+                Estado. Las principales actividades económicas de Pueblo Nuevo son de tipo agrícola, pecuarias y
+                turísticas. Se practica la cría de ganado vacuno, caprino, ovino y plantaciones de sábila; además,
+                es uno de los pueblos más evolucionados de esa región.
+            </p>
+
+            <h3><span>2</span>Buena Vista.</h3>
+
+            <p>Se desconoce la fecha exacta de su fundación, pero por el título de la iglesia se considera que la
+                formación del “Valle de San Juan Bautista de Buena Vista” comenzó de 1710 a 1720. Buena Vista, se
+                considera puente entre muchos de los otros pueblos, pues, también es uno de los más evolucionados. 
+            </p>
+
+            <h3><span>3</span>Moruy.</h3>
+
+            <p>Ubicado a 16 km de Santa Ana, en el municipio Falcón, es quizás el pueblo de indios más antiguo de 
+                la <b>península</b>. Este, se considera uno de los pueblos más folklóricos, pues, anuelmente celebran
+                la <b>Fiesta de los Locos</b>, como le llaman popularmente los moruyeros; las personas mayores de esa
+                época, también hablaban sobre esta festividad, lo cual indica que esta celebración viene desde tiempo
+                remoto.
+            </p>
+        </div>
+    </main>
+
+    <footer>
+        <div id="pie">
+            <br>Estado Falcón, Venezuela. <br>Península de Paraguaná.</b>
+        </div>
+    </footer>
 </body>
 </html>
