--- a/turismo.html
+++ b/turismo.html
@@ -24,5 +24,49 @@
             <a href="mitos.html">Mitos y Leyendas</a>
         </div>
     </header>
+
+    <main>
+        <div id="cuerpo turismo">
+
+            <p class="intro turismo">Paraguaná, cuenta con una gran diversidad de hermosos paisajes y lugares ideales para 
+                hacer turismo:
+            </p>
+
+            <h3><span>1</span>Cerro De Santa Ana.</h3>
+
+            <p>Es un monumento natural ubicado en el centro de la <b>península de Paraguaná</b> al norte del estado Falcón
+                en jurisdicción de los municipios Falcón y Carirubana, entre las poblaciones de Santa Ana y Buena Vista. 
+                Cuenta con una superficie de 1900 hectáreas y alcanza una altura máxima de 830 msnm. Fue declarado Monumento
+                Natural el 14 de junio de 1972.</p>
+
+            <h3><span>2</span>Adícora.</h3>
+
+            <p>Adícora, es un pueblo que se encuentra costa noreste de la península de Paraguaná, en Venezuela, específicamente
+                en el municipio Falcón y a 24 kilómetros al sur de la isla de Aruba. Se puede acceder por vía terrestre o aérea
+                (en avioneta).
+            </p>
+
+            <p>Es una playa poco profunda protegida por arrecifes, aguas frescas, con mayor oleaje que la zona occidental. En la
+                población de Adícora se encuentran varias posadas, al igual que residencias de alquiler para el alojamiento y 
+                diversidad de restaurantes. Debido a los fuertes vientos que allí se encuentran, se ha convertido en un centro 
+                internacional para la práctica del kiteboarding y windsurfing. Es un importante destino turístico, cuyos temporadistas
+                escogen los asuetos de Semana Santa, Carnavales y el mes de agosto principalmente por sus playas, posadas, restaurantes
+                y lo acogedor del pueblo y sus casa de tipo coloniales.
+            </p>
+
+            <h3><span>3</span>Cabo San Román.</h3>
+
+            <p>Es el punto más septentrional de la Venezuela continental y desde donde se logran ver las luces de Aruba y Curazao
+                en la noche. En el cabo San Román hay numerosos acantilados y médanos a la orilla del mar. De estos el más célebre
+                es el Médano Blanco. 
+            </p>
+        </div>
+    </main>
+
+    <footer>
+        <div id="pie">
+            <br>Estado Falcón, Venezuela. <br>Península de Paraguaná.</b>
+        </div>
+    </footer>
 </body>
 </html>
