--- a/mitos.html
+++ b/mitos.html
@@ -5,13 +5,14 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Península de Paraguaná</title>
+    <link rel="shortcut icon" href="img/fondocabecera.jpg" type="image/x-icon">
     <link rel="stylesheet" href="css/estilos.css">
 </head>
 
 <body>
     <header>
         <div id="encabezado">
-            <img src="">
+            <img src="img/fondocabecera.jpg">
             <h1>Península de Paraguaná</h1>
         </div>
 
