--- a/index.html
+++ b/index.html
@@ -12,7 +12,6 @@
 <body>
     <header>
         <div id="encabezado">
-            <img src="img/fondocabecera.jpg">
             <h1>Península de Paraguaná</h1>
         </div>
 
@@ -29,6 +28,8 @@
     <main>
         <div id="cuerpo">
             <div class="p1">
+
+                <img src="img/paraguana1.jpg">
 
                 <p class="reseña principal">Reseña.</p>
 
