inicio de estilos

--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
         <div id="cuerpo">
             <div class="p1">
 
-                <img src="img/paraguana1.jpg">
+                <img src="img/paraguana1.jpg" class="img1">
 
                 <p class="reseña principal">Reseña.</p>
 
