--- a/economia.html
+++ b/economia.html
@@ -28,7 +28,9 @@
     <main>
         <div id="cuerpo economia">
             
-            <p class="reseña economia">Economía.</p>
+            <h2>Economía.</h2>
+
+            <img src="img/economia.jpg" class="img10">
 
             <p class="economia1">La principal actividad económica de la <b>Península de Paraguaná</b>, está
                 relacionada con la industria petrolera. En la <b>Península de Paraguaná</b>, se ubican dos
