--- a/index.html
+++ b/index.html
@@ -29,9 +29,7 @@
         <div id="cuerpo">
             <div class="p1">
 
-                <img src="img/paraguana1.jpg" class="img1">
-
-                <p class="reseña principal">Reseña.</p>
+                <img src="img/paraguana1.jpg">
 
                 <p class="principal">La <b>Península de Paraguaná</b>, se encuentra situada al norte del estado 
                     Falcón, en Venezuela. Es una zona xerófila y de suelo árido casi en su totalidad. Surgió como
@@ -43,7 +41,7 @@
             </div>
             
             <div class="p2">
-                <p class="Reseña historica">Reseña Hostórica.</p>
+                <h2>Reseña Hostórica.</h2>
             
                 <p class="historica1">La <b>Península de Paraguaná</b> fue descubierta por el navegante Alonso de Ojeda
                     el 9 de agosto de 1499, el día de San Román (en), y por esta circunstancia fue bautizada como
