--- a/mitos.html
+++ b/mitos.html
@@ -40,6 +40,8 @@
                 carcajadas, gritos, acordes de violines, y muchos otros ruidos, en el cerro.
             </p>
 
+            <img src="img/espantos.jpg" class="img9">
+            
             <h3><span>2</span>Los espantos del Callejón Miranda.</h3>
 
             <p>Es una leyenda existente en la población de Pueblo Nuevo, según la cual apariciones vestidas totalmente
