--- a/platos.html
+++ b/platos.html
@@ -28,8 +28,9 @@
     <main>
         <div id="cuerpo platos">
             
-            <p class="intro">Paraguaná, cuenta con una variedad muy extensa de platos típicos; entre
-                ellos destacan:</p>
+            <h2>Paraguaná, cuenta con una variedad muy extensa de platos típicos; entre ellos destacan:</h2>
+            
+            <img src="img/arepa.jpg" class="img1">
 
             <h3><span>1</span>Arepa pelada con queso de cabra.</h3>
 
@@ -46,6 +47,8 @@
                 cosechas paraguaneras. Esta arepa, generalmente es dulce, ya que, a la preparación, se le agrega panela y
                 leche.
             </p>
+
+            <img src="img/chivo.jpg" class="img2">
 
             <h3><span>3</span>Chivo.</h3>
 
