--- a/pueblos.html
+++ b/pueblos.html
@@ -28,10 +28,11 @@
     <main>
         <div id="cuerpo pueblos">
 
-            <p class="reseña pueblos">Por su clima y por ser una región costera, la <b>Península de Paraguaná</b>,
-            se encuentra rodeada de hermosos pueblitos y paisajes; algunos de ellos son:
-            </p>
+            <h2>Por su clima y por ser una región costera, la <b>Península de Paraguaná</b>,
+            se encuentra rodeada de hermosos pueblitos y paisajes; algunos de ellos son:</h2>
             
+            <img src="img/pueblo nuevo.jpg" class="img6">
+
             <h3><span>1</span>Pueblo nuevo.</h3>
 
             <p>Se encuentra ubicado en la <b>península de Paraguaná</b> y es capital del municipio Falcón em dicho
@@ -40,6 +41,8 @@
                 es uno de los pueblos más evolucionados de esa región.
             </p>
 
+            <img src="img/buena vista.jpg" class="img7">
+
             <h3><span>2</span>Buena Vista.</h3>
 
             <p>Se desconoce la fecha exacta de su fundación, pero por el título de la iglesia se considera que la
@@ -47,6 +50,8 @@
                 considera puente entre muchos de los otros pueblos, pues, también es uno de los más evolucionados. 
             </p>
 
+            <img src="img/moruy.JPG" class="img8">
+            
             <h3><span>3</span>Moruy.</h3>
 
             <p>Ubicado a 16 km de Santa Ana, en el municipio Falcón, es quizás el pueblo de indios más antiguo de 
