--- a/turismo.html
+++ b/turismo.html
@@ -28,9 +28,10 @@
     <main>
         <div id="cuerpo turismo">
 
-            <p class="intro turismo">Paraguaná, cuenta con una gran diversidad de hermosos paisajes y lugares ideales para 
-                hacer turismo:
-            </p>
+            <h2>Paraguaná, cuenta con una gran diversidad de hermosos paisajes y lugares ideales para 
+                hacer turismo:</h2>
+
+            <img src="img/cerro santa ana.jpg" class="img3">
 
             <h3><span>1</span>Cerro De Santa Ana.</h3>
 
@@ -39,12 +40,9 @@
                 Cuenta con una superficie de 1900 hectáreas y alcanza una altura máxima de 830 msnm. Fue declarado Monumento
                 Natural el 14 de junio de 1972.</p>
 
-            <h3><span>2</span>Adícora.</h3>
+            <img src="img/adicora.jpg" class="img4">
 
-            <p>Adícora, es un pueblo que se encuentra costa noreste de la península de Paraguaná, en Venezuela, específicamente
-                en el municipio Falcón y a 24 kilómetros al sur de la isla de Aruba. Se puede acceder por vía terrestre o aérea
-                (en avioneta).
-            </p>
+            <h3><span>2</span>Adícora.</h3>
 
             <p>Es una playa poco profunda protegida por arrecifes, aguas frescas, con mayor oleaje que la zona occidental. En la
                 población de Adícora se encuentran varias posadas, al igual que residencias de alquiler para el alojamiento y 
@@ -53,6 +51,8 @@
                 escogen los asuetos de Semana Santa, Carnavales y el mes de agosto principalmente por sus playas, posadas, restaurantes
                 y lo acogedor del pueblo y sus casa de tipo coloniales.
             </p>
+
+            <img src="img/cabo.jpg" class="img5">
 
             <h3><span>3</span>Cabo San Román.</h3>
 
