--- a/mitos.html
+++ b/mitos.html
@@ -28,9 +28,8 @@
     <main>
         <div id="cuerpo mitos">
 
-            <p class="reseña mitos">Paraguaná, ha crecido rodeado de Mitos y Leyendas que, los abuelos de hoy en
-                día se han nencargado de que aún se escuchen éstas historias.
-            </p>
+            <h2>Paraguaná, ha crecido rodeado de Mitos y Leyendas que, los abuelos de hoy en
+                día se han nencargado de que aún se escuchen éstas historias.</h2>
             
             <h3><span>1</span>La serpiente emplumada.</h3>
 
