--- a/mitos.html
+++ b/mitos.html
@@ -11,18 +11,28 @@
 
 <body>
     <header>
-        <div id="encabezado">
-            <h1>Península de Paraguaná</h1>
-        </div>
-
-        <div id="navegacion">
-            <a href="index.html">Inicio</a>
-            <a href="platos.html">Platos típicos</a>
-            <a href="turismo.html">Turismo</a>
-            <a href="pueblos.html">Pueblos y Culturas</a>
-            <a href="economia.html">Economía</a>
-            <a href="mitos.html">Mitos y Leyendas</a>
-        </div>
+        <nav class="cabeza">
+            <div class="titulo">
+                <div>
+                    <img src="img/fondocabecera.jpg" class="logo">
+                </div>
+        
+                <div id="encabezado">
+                    <h1>Península de Paraguaná</h1>
+                </div>
+            </div>
+    
+            <div id="navegacion">
+                <ul>
+                    <li><a href="index.html">Inicio</a></li>
+                    <li><a href="platos.html">Platos típicos</a></li>
+                    <li><a href="turismo.html">Turismo</a></li>
+                    <li><a href="pueblos.html">Pueblos y Culturas</a></li>
+                    <li><a href="economia.html">Economía</a></li>
+                    <li><a href="mitos.html">Mitos y Leyendas</a></li>
+                </ul>
+            </div>
+        </nav>
     </header>
 
     <main>
